--- a/app/less/sections/menu.less
+++ b/app/less/sections/menu.less
@@ -1,3 +1,5 @@
+@menu-icon-size: 40px;
+
 section.menu {
   @local-padding: 20px;
   @input-placeholder-color: @gray;
@@ -11,6 +13,7 @@ section.menu {
   width: @menu-width;
   font-size: 0.9em;
   overflow-y: auto;
+  padding-bottom: 100px;
 
   input {
     margin: @local-padding;
@@ -40,13 +43,11 @@ section.menu {
     }
 
     .icon-mobile {
-      font-size: 40px;
+      font-size: @menu-icon-size;
     }
   }
 
   .body {
-    // margin-bottom: 100px;
-
     p {
       margin: 0;
       display: inline-block;
@@ -221,7 +222,10 @@ section.small-menu {
   overflow-y: auto;
   min-height: 250px;
   width: 230px;
-  box-shadow: 0 0 10px 0 rgba(0,0,0,.44), @inset-shadow;
+  box-shadow: -6px -2px 6px 0px rgb(49, 51, 56), @inset-shadow;
+  margin-bottom: 0;
+  max-height: 80vh;
+  overflow-y: auto;
 
   &.toggled-down {
     min-height: 62px;
@@ -288,7 +292,8 @@ section.small-menu {
   section.small-menu {
     width: 95%;
     .body .user .toggle {
-      top: 12px;
+      top: 8px;
+      font-size: @menu-icon-size - 10;
     }
   }
 }
